--- a/style.css
+++ b/style.css
@@ -11,7 +11,30 @@ nav {
   padding: 20px 0px 10px 5rem;
 }
 
+#nav-toggle {
+  position: absolute;
+  top: -100px;
+}
+
+nav .icon-burger {
+  display: none;
+  position: absolute;
+  left: 143%;
+  top: 7%;
+  transform: translateY(-50%);
+}
+
+nav .icon-burger .line {
+  width: 30px;
+  height: 5px;
+  background-color: #000000;
+  margin: 5px;
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
 .nav-items {
+  z-index: 10;
   display: flex;
   padding-left: 1.5rem;
   gap: 4rem;
@@ -115,70 +138,230 @@ nav div + img:hover {
 }
 
 .discount {
-    position: absolute;
-    top: 49%;
-    left: 51%;
-    z-index: 1;
-    height: 145px;
+  position: absolute;
+  top: 49%;
+  left: 51%;
+  z-index: 1;
+  height: 145px;
 }
 
 .discount-content {
-    position: absolute;
-    top: 50%;
-    left: 53.5%;
-    z-index: 2;
-    height: 118px;
-    color: #ffffff;
-    line-height: 30px;
+  position: absolute;
+  top: 50%;
+  left: 53.5%;
+  z-index: 2;
+  height: 118px;
+  color: #ffffff;
+  line-height: 30px;
 }
 
 .discount-content h1 {
-    position: relative;
-    bottom: 1.4rem;
-    right: 1rem;
-    font-size: 3rem;
+  position: relative;
+  bottom: 1.4rem;
+  right: 1rem;
+  font-size: 3rem;
 }
 
 .discount-content h4 {
-    position: relative;
-    right: 1rem;
-    font-size: small;
-    text-align: center;
+  position: relative;
+  right: 1rem;
+  font-size: small;
+  text-align: center;
 }
 
-.dots{
-    display: flex;
-    gap: 20px;
-    position: absolute;
-    top: 75%;
-    left: 62%;
-
+.dots {
+  display: flex;
+  gap: 20px;
+  position: absolute;
+  top: 75%;
+  left: 62%;
 }
 
 .dot.yellow-dot {
-    background-color: #ffff00;
-    height: 25px;
-    width: 25px;
-    border-radius: 50px;
+  background-color: #ffff00;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
 }
 
 .dot.tomato-dot {
-    background-color: #ff6347;
-    height: 25px;
-    width: 25px;
-    border-radius: 50px;
+  background-color: #ff6347;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
 }
 
 .dot.black-dot {
-    background-color: #000000;
-    height: 25px;
-    width: 25px;
-    border-radius: 50px;
+  background-color: #000000;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
 }
 
-.dots+.action-btn{
+.dots + .action-btn {
+  position: relative;
+  top: 32.7rem;
+  right: 4rem;
+}
+
+@media only screen and (max-width: 480px) {
+  nav .nav-items {
+    float: none;
+    position: fixed;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.9);
+    left: 0;
+    right: 0;
+    top: 100px;
+    bottom: 100%;
+    overflow: hidden;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    transition: all 0.5s ease-in-out;
+  }
+
+  nav .nav-items h5 {
+    font-size: 35px;
+    font-weight: 900;
+    color: #fe5e35;
+  }
+
+  nav :checked ~ .nav-items {
+    bottom: 0;
+  }
+
+  nav .icon-burger {
+    display: block;
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+    transform: translateY(10px) rotate(225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+    transform: translateY(-10px) rotate(-225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+    opacity: 0;
+  }
+
+  .nav-item:hover {
+    color: #ffffff;
+  }
+
+  .icons {
+    display: none;
+  }
+
+  .intro-section {
+    display: block;
     position: relative;
-    top: 32.7rem;
-    right: 4rem;
-    
+    top: 7rem;
+  }
+
+  .right-section {
+    position: relative;
+    top: 10rem;
+  }
+
+  .left-section h3{
+    position: relative;
+    bottom: 2rem;
+    width: 26rem;
+    font-size: 2.5rem;
+  }
+
+  .left-section h1{
+    position: relative;
+    bottom: 3rem;
+    font-size: 3rem;
+    width: 30rem;
+  }
+
+  .sub-headlines{
+    width: 25rem;
+    position: relative;
+    bottom: 3rem;
+  }
+
+  .sub-headline{
+    font-size: 25px;
+  }
+
+  .text{
+    font-size: 20px;
+    text-align: center;
+    color: black;
+    position: relative;
+    right: 3rem;
+  }
+
+  .action-btns{
+    position: relative;
+    left: 5rem;
+  }
+
+  .action-btn{
+    font-size: 20px;
+  }
+
+  .right-section{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .headphone-div{
+    position: relative;
+    right: 5rem;
+    bottom: 8rem;
+  }
+
+  .discount{
+    position: relative;
+    top: 16rem;
+    right: 1rem;
+  }
+
+  .discount-content{
+    position: relative;
+    top: 9rem;
+  }
+
+  .discount-content h4{
+    position: relative;
+    right: 10rem;
+    bottom: 2rem;
+    font-size: 20px;
+  }
+
+  .discount-content h1{
+    position: relative;
+    left: 1rem;
+    bottom: 3rem;
+  }  
+
+  .dots{
+    position: relative;
+    top: 6rem;
+  }
+
+  .right-section button {
+    visibility: hidden;
+  }
+
+  .dots::after{
+    content: "Add to Cart";
+    position: relative;
+    top: 8rem;
+    right: 10.5rem;
+    font-weight: 800;
+    font-size: 25px;
+    background-color: #fe5e35;
+    color: #ffffff;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+  }
 }
